# olist-catalyst

./: .gitignore  README.md  business_insights.ipynb  data_wrangling.ipynb  docker-compose.yml  main.py  populate_db.py  predictive_analysis.py  pyproject.toml  run_analysis.py
backend/: Dockerfile  api_queries.py  business_api.py  main.py  platform_api.py  populate_db.py  predictive_analysis.py  schema.sql
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(admin)/: layout.tsx  page.tsx
frontend/src/components/charts/: AssociationRulesGraph.tsx  CustomerJourneySankey.tsx  NegativeKeywordsCloud.tsx  OrderStatusDistributionChart.tsx  PaymentMethodDistributionChart.tsx  PerformanceGauge.tsx  ProductPotentialMatrix.tsx  RevenueTrendChart.tsx  RfmChart.tsx  SalesTrendChart.tsx  SellerCategoryDistributionChart.tsx  SellerReviewDistributionChart.tsx  SellerSalesTrendChart.tsx  SentimentByCategoryChart.tsx  SentimentDistributionChart.tsx  SentimentDistributionPieChart.tsx  SentimentDonutChart.tsx  SentimentTrendChart.tsx  ShippingTimeChart.tsx  TopNegativeCategoriesChart.tsx
frontend/src/components/common/: KpiCard.tsx  Pagination.tsx  SimpleKpiCard.tsx
frontend/src/components/ecommerce/: EcommerceMetrics.tsx  PlatformKPIs.tsx
frontend/src/components/header/: SellerDropdown.tsx
frontend/src/components/maps/: CustomerGeoMap.tsx  (+2 more)
frontend/src/context/: SellerContext.tsx
frontend/src/layout/: AppHeader.tsx  AppSidebar.tsx  SidebarWidget.tsx
frontend/src/lib/: api.ts
(+36 files in other folders)
